--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,22 @@
 <html>
-<head>
-<title>Blogs</title>
-</head>
-<body>
+    <head>
+        <title>anubhav's blog</title>
+    </head>
+    <body>
+        <div>
+            <h1><a href="/">my Blog</a></h1>
+        </div>
 
-<div>
-<h1><a href="/">Blogs</a></h1>
-</div>
+        <div>
+            <p>published: 14.06.2014, 12:14</p>
+            <h2><a href="">My first post</a></h2>
+            <p> this is my first blog post ..blog part is done</p>
+        </div>
 
-<div>
-<p>just for fun</p>
-<h2><a href="">My first post</a></h2>
-</div>
-
-</body>
+        <div>
+            <p>published: 14.06.2014, 12:14</p>
+            <h2><a href="">My second post</a></h2>
+            <p> weather is humid and there is a lot of work to do</p>
+        </div>
+    </body>
 </html>
