--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,37 +1,18 @@
 <html>
     <head>
-        <title>Bloggers</title>
+        <title>bloggers</title>
     </head>
     <body>
         <div>
-            <h1><a href="/">Bloggers</a></h1>
-        </div>
+    <h1><a href="/">bloggers</a></h1>
+</div>
 
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href=""> Frank Sonnenberg</a></h2>
-            <p>“Moral character is the DNA of success and happiness.”</p>
-        </div>
-
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">Eric Edmeades</a></h2>
-            <p>“Success, in life, is most easily measured by the number of days you are truly happy.”</p>
-        </div>
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">George Bernard Shaw</a></h2>
-            <p>“Progress is impossible without change, and those who cannot change their minds cannot change anything.”</p>
-        </div>
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">Henry David Thoreau</a></h2>
-            <p>“Let go of the past and go for the future. Go confidently in the direction of your dreams. Live the life you imagined.”</p>
-        </div>
-        <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">Dr. William Larkin</a></h2>
-            <p>“NeuroPositivity is what results when you increase the growth and stimulation of neuropathways in the brain that control positivity. We can liken it to a positive state of mind, but it really goes even further. It is a positive state of being.”</p>
-        </div>
+{% for post in posts %}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
     </body>
 </html>
